@@ -1,24 +1,24 @@
 
-# This file was automatically generated by Dist::Zilla::Plugin::ModuleBuild v5.016.
+# This file was automatically generated by Dist::Zilla::Plugin::ModuleBuild v5.020.
 use strict;
 use warnings;
 
-use Module::Build 0.3601;
+use Module::Build 0.28;
 
 
 my %module_build_args = (
   "build_requires" => {
-    "Module::Build" => "0.3601"
+    "Module::Build" => "0.28"
   },
   "configure_requires" => {
-    "Module::Build" => "0.3601"
+    "Module::Build" => "0.28"
   },
   "dist_abstract" => "Catmandu module for working with SRU data",
   "dist_author" => [
     "Wouter Willaert, C<< <wouterw\@inuits.eu> >>"
   ],
   "dist_name" => "Catmandu-SRU",
-  "dist_version" => "0.037",
+  "dist_version" => "0.038",
   "license" => "perl",
   "module_name" => "Catmandu::SRU",
   "recommends" => {},
@@ -35,6 +35,7 @@ my %module_build_args = (
   },
   "script_files" => [],
   "test_requires" => {
+    "Test::Exception" => 0,
     "Test::More" => "1.001003",
     "Test::Simple" => "1.001003",
     "XML::XPath" => "1.13"
@@ -43,7 +44,8 @@ my %module_build_args = (
 
 
 my %fallback_build_requires = (
-  "Module::Build" => "0.3601",
+  "Module::Build" => "0.28",
+  "Test::Exception" => 0,
   "Test::More" => "1.001003",
   "Test::Simple" => "1.001003",
   "XML::XPath" => "1.13"
